@@ -1,3 +1,9 @@
+Sun Aug 16 23:52:38 BST 2009  Colin Watson  <cjwatson@debian.org>
+
+	* src/tests/testlib.sh: Add a simple test library, to be extended as
+	  necessary.
+	* src/tests/manconv-1: Use it.
+
 Sun Aug 16 23:37:11 BST 2009  Colin Watson  <cjwatson@debian.org>
 
 	* src/tests/manconv-1: Simple test for manconv's handling of
